# psycop-common

./: .buildinfo  .cookiecutter.json  .cookiecutter.json.rej  .coveragerc  .cruft.json  .dockerignore  .flake8  .gitignore  .gitmodules  .importlinter  .pre-commit-config.yaml  .snyk  .spr.yml  BUILD  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Kubeflow  Makefile  Makefile.rej  README.md  README.md.rej  data.json  dev-requirements.txt  frozen-requirements.txt  gpu-requirements.txt  ldl-sampling.py  lefthook.yml  notebook.py  notebook2.py  objects.inv  package-lock.json  package.json  pants.toml  pyproject.toml  pyproject.toml.rej  pytest.ini  requirements.txt  (+15 more)
.aucs/: aucs.txt
.devcontainer/: ,masdf  devcontainer.json  post-start.sh
.github/: CODEOWNERS  dependabot.yml  periodical_vulnerability_scan.yml  pull_request_template.md  recommended_repo_setup.md  recommended_repo_setup.md.rej
.github/disabled_workflows/: documentation.yml  publish_devcontainer.yml
.github/workflows/: build_dev_container.yml  build_devcontainer_multiplatform.yml  bump-version.yml  cache_version  check_for_rej.yml  cruft.yml  cruft.yml.rej  darglint.yml  dependabot_automerge.yml  kubeflow-publish.yml  lint.yml  main_test_and_release.yml  modified_shared_files copy.yml  modified_shared_files.yml  move_assigned_tasks.yml  pants.yml  periodical_vulnerability_scan.yml  pr_test.yml  pre-commit-custom.yml  pre-commit.yml  pre-commit.yml.rej  publish_devcontainer.yml  pytest.yml  release.yml  release.yml.rej  repo_fingerprint.yml  review_checkbox.yml  review_checklist.yml  snyk.yml  stalebot.yml  static_type_checks.yml  test.yml  test_prs.yml  tests.yml  tests.yml.rej  tests_post_coverage_comment.yml  type_check.yml  vulnerability_scan.yml
_sources/: index.md.txt  installation.md.txt
_sources/api/: docs_example.md.txt
application/: inspect_dataset.py  main.py  main_process_manager.py  test_imports.py  train_and_log_models.py  train_model.py  train_model_from_application_module.py
application/artifacts/: custom_artifacts.py
application/config/: default_config.yaml
application/custom_config_schemas/: custom_columns.py
application/loaders/: preprocessing_loaders.py
application/t2d/: inspect_dataset.py  train_and_log_models.py
automation/: error_handling.py  git.py  github.py  lint.py  logger.py  setup.py  windows.py
docs/: Makefile  conf.py  faq.md  index.md  index.rst  installation.md  make.bat
docs/api/: docs_example.md
evaluation_results/: eval_model_name-xgboost_require_imputation-True_args-n_estimators-100_tree_method-auto_2022_09_22_10_52.pkl
examples/: load_data.py
htmlcov/: d_0002e331bd2873fb_to_disk_py.html  d_0087fb042dd4b601_md_objects_py.html  d_0087fb042dd4b601_test_md_objects_py.html  d_00b4e0eb0f3474d8_test_model_evaluator_py.html  d_00b4e0eb0f3474d8_test_train_model_py.html  d_00b4e0eb0f3474d8_test_wandb_handler_py.html  d_02fa8b027d7101cd_full_processor_py.html  d_09fb8dcba7b51630_create_pipeline_py.html  d_09fb8dcba7b51630_pipeline_py.html  d_0c25746e3736f789_generate_synthetic_dataset_for_eval_py.html  d_0f4ae814586edd64_performance_by_ppr_py.html  d_0f4ae814586edd64_prop_of_all_events_hit_by_true_positive_py.html  d_0f4ae814586edd64_test_performance_by_ppr_py.html  d_0f90a1f33aa8420e_main_py.html  d_0f9ffb211f8fd54e_MLMLoaders_py.html  d_0f9ffb211f8fd54e_diagnoses_sequences_py.html  d_0f9ffb211f8fd54e_sequences_for_mlm_py.html  d_102b0fb476e8548b_config_py.html  d_15a8c1d9f9977a83_bootstrap_estimates_py.html  d_15a8c1d9f9977a83_subgroup_data_py.html  d_15a8c1d9f9977a83_utils_py.html  d_1beb1246bc776951_str_to_df_py.html  d_1c763c1b7e9f8677_robustness_plot_py.html  d_1c763c1b7e9f8677_test_robustness_plots_py.html  d_1e378c0ce70339ce_diabetes_filters_py.html  d_218f8949cb086678_test_models_py.html  d_218f8949cb086678_test_preprocessing_py.html  d_22afaa2bd74ebdbd_base_py.html  d_22afaa2bd74ebdbd_wandb_logger_py.html  d_2767f65252a76f0b___init___py.html  d_2767f65252a76f0b_local_feature_loaders_py.html  d_2baa8c47ad73f995_filter_prediction_times_py.html  d_2baa8c47ad73f995_flatten_dataset_py.html  d_2baa8c47ad73f995_project_setup_py.html  d_2baa8c47ad73f995_save_dataset_to_disk_py.html  d_2baa8c47ad73f995_wandb_utils_py.html  d_2ccc013c6d06bb7d_col_name_inference_py.html  d_2ccc013c6d06bb7d_decorators_py.html  d_2ccc013c6d06bb7d_utils_py.html  d_3010e9c584f8b70c_base_py.html  (+276 more)
psycop/: __init__.py  conftest.py  test_unpack_annotations.py  unpack_annotations.py
psycop/automation/: environment.py  error_handling.py  git.py  github.py  lint.py  logger.py
psycop/common/: cohort_definition.py  minimal_pipeline.py  test_cohort_definition.py  test_e2e.py
psycop/common_v2/: interfaces.py
psycop/projects/: README.md
reports/: render_report.py  report_template.py
rmd/: 00_hba1c.rmd  00_medication.rmd  01_hba1c.rmd  02_diagnoses.rmd  03_combined.rmd  10_descriptive_stats.rmd  20_hba1c.rmd  41_find_first_p.rmd  49_combined.rmd
rmd/00_generate_dfs/: 10_medication.rmd  20_hba1c.rmd  30_diagnoses.rmd  41_find_first_p.rmd  49_combined.rmd
src/: T2D-example.rmd  functions.r  t2d_incidence_age.txt  utils.py
src.egg-info/: PKG-INFO  SOURCES.txt
src/data/: generate_synthetic_dataset_for_eval.py
src/feature_generation/: create_prediction_dataframe.py  get_data.py  load_data.py  requirements.txt
src/features/: load_features.py  post_process.py  process_features.py
src/model_fitting/: grid_search_text_and_metadata_v5_AND_v3.py  train.py  train_test_split.py  utils.py
src/models/: train_model.py
src/psycop/: __init__.py  conftest.py  global_utils.py  utils.py
tests/: .pytest_results  __init__.py  conftest.py  test_auc_by_group_table.py  test_calculate_performance_metrics.py  test_configs.py  test_create_eval_dataset.py  test_descriptive_stats_table.py  test_load.py  test_log_performance_metrics.py  test_model_performance.py  test_performance_by_threshold.py  test_pipeline.py  test_preprocessing.py  test_sens_over_time.py  test_time_from_flag_to_diag.py  test_train_model.py  test_utils.py  test_visualizations.py  utils_for_testing.py
(+2956 files in other folders)
