[project]
name = "psycop"
version = "0.94.0"
authors = [
  {name = "Martin Bernstorff", email = "martinbernstorff@gmail.com"}
]
description = "PSYCOP"
classifiers = [
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.10"

[project.license]
file = "LICENSE"
name = "MIT"
[project.optional-dependencies]
dev = [
  "cruft",
  "pyright==1.1.305",
  "pre-commit==3.3.3",
  "ruff==0.0.272", # important that these match the pre-commit hooks
  "black[jupyter]==23.3.0", # important that these match the pre-commit hooks
  "pandas-stubs", # type stubs for pandas
  "invoke",

]
tests = [
  "pytest>=7.1.3,<7.4.0",
  "pytest-cov>=3.0.0,<4.2.0",
  "pytest-xdist>=3.0.0,<3.4.0",
  "pytest-sugar>=0.9.4,<0.10.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/Aarhus-Psychiatry-Research/psycop-common"
repository = "https://github.com/Aarhus-Psychiatry-Research/psycop-common"
documentation = "https://Aarhus-Psychiatry-Research.github.io/psycop-common/"

[tool.pyright]
include = ["psycop"]
exclude = ["**/.*venv*", ".tox", "build"]
pythonPlatform = "Darwin"
typeCheckingMode = "strict"
reportUnknownArgumentType = "none"	
reportUnknownLambdaType = "none"	
reportUnknownMemberType = "none"	
reportUnknownParameterType = "none"	
reportUnknownVariableType = "none" 
reportMissingTypeStubs = "none"
reportMissingTypeArgument = "none"
reportUntypedFunctionDecorator = "none"
reportIncompatibleVariableOverride = "none"
reportUnusedVariable = "none"
reportUnusedImports = "none"
reportPrivateImportUsage = "none"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C4",
  "COM",
  "D417",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "NPY001",
  "PD002",
  "PIE",
  "PLE",
  "PLW",
  "PT",
  "UP",
  "Q",
  "PTH",
  "RSE",
  "RET",
  "RUF",
  "SIM",
  "TCH",
  "W"
]
ignore = [
  "ANN101",
  "ANN401",
  "B007",
  "E402",
  "E501",
  "F401",
  "F841",
  "RET504"
]
ignore-init-module-imports = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["ERA"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__init__.py",
  "docs/conf.py",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"

[tool.ruff.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.isort]
known-third-party = ["wandb", "joblib"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"psycop/projects/restraint/model_evaluation/figures/feature_importance/shap/get_shap_values.py" = ["I001"]
"psycop/projects/restraint/model_evaluation/data/load_true_data.py" = ["I001"]
"psycop/common/global_utils/cache.py" = ["I001"]


[tool.semantic_release]
branch = "main"
version_variable = [
  "pyproject.toml:version"
]
upload_to_pypi = false
upload_to_release = false
build_command = "python -m pip install build; python -m build"

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
markers = [
  "pre_push_test: Tests run on push. Should be as minimal as possible to maintain fast push speeds."
]
norecursedirs = [".venv", "*.egg-info",".git",".tox"]